# outsource

AR/: CMakeLists.txt  Doxyfile
AR/cmake/: FindExiv2.cmake  FindFFMPEG.cmake  FindG3logger.cmake  QtAV.rc.in  clang-cpp-dev-tools.cmake  gtu-common.cmake  gtu-init.cmake  gtu-versions.cmake
AR/cmake/toolchain/: Windows.cmake
AR/gui/: CMakeLists.txt  debugwindow.ui  groundstation.cpp  groundstation.h  groundstation.ui  main.cpp  testar.cpp  testar.h  testar.ui
AR/hermes-gui/: CMakeLists.txt
AR/hermes-gui/include/: baseguiwidget.h  commoncommands.h  coreutils.h  datasample.h  enum_mapping.h  follow_entity_camera.h  gimbal.h  gimbalview.h  groundplane.h  gtu-core_global.h  gui_tools.h  h3ddemo.h  hermes.h  irmode.h  restorevideo.h  rfsettings.h  rxquality.h  scene_modifier.h  setmavuavmode.h  timeouttimer.h  toyplane.h  vdwidget.h
AR/hermes-gui/include/geo/: geo_mgrs.h
AR/hermes-gui/include/video/: videofilterbase.h  videofiltergmb.h  videofilterice.h  videofilterosd.h  videofilterrfstat.h  videofiltervertical.h
AR/hermes-gui/res/: gui-res.qrc
AR/hermes-gui/res/cfg/: default.json  replay_ts.json
AR/hermes-gui/src/: baseguiwidget.cpp  commoncommands.cpp  coreutils.cpp  datasample.cpp  follow_entity_camera.cpp  gimbal.cpp  gimbal.ui  gimbalview.cpp  gimbalview.ui  groundplane.cpp  gui_tools.cpp  h3ddemo.cpp  h3ddemo.ui  hermes.cpp  irmode.cpp  irmode.ui  restorevideo.cpp  restorevideo.ui  rfsettings.cpp  rfsettings.ui  rxquality.cpp  samplemetainfo.cpp  samplemetainfo.h  scene_modifier.cpp  setmavuavmode.cpp  setmavuavmode.ui  timeouttimer.cpp  toyplane.cpp  vdwidget.cpp  vdwidget.ui
AR/hermes-gui/src/geo/: geo_mgrs.cpp
AR/hermes-gui/src/geo/mgrs/: mgrs.c  polarst.c  tranmerc.c  ups.c  utm.c
AR/hermes-gui/src/video/: videofilterbase.cpp  videofilterbgmb.cpp  videofilterice.cpp  videofilterosd.cpp  videofilterrfstat.cpp  videofiltervertical.cpp
AR/libQtAV/: CMakeLists.txt
AR/libQtAV/QtAV/: AVOutput.h  Filter.h  OpenGLRendererBase.h  QtAV_Global.h  VideoOutput.h  VideoRenderer.h
AR/libQtAV/codec/video/: VideoDecoderD3D11.cpp
AR/libQtAV/contrib/capi/: capi.h
AR/libQtAV/directx/: D3D11VP.cpp
AR/libQtAV/filter/: Filter.cpp
AR/libQtAV/opengl/: OpenGLVideo.cpp  ShaderManager.cpp  VideoShader.cpp
AR/libQtAV/output/audio/: xaudio2_compat.h
AR/libQtAV/output/video/: OpenGLRendererBase.cpp  OpenGLWindowRenderer.cpp  QPainterRenderer.cpp  VideoRenderer.cpp
AR/libQtAVWidgets/: CMakeLists.txt  GLWidgetRenderer2.cpp  GraphicsItemRenderer.cpp  OpenGLWidgetRenderer.cpp  Qt3DRenderer.cpp  WidgetRenderer.cpp  global.cpp
AR/libQtAVWidgets/QtAVWidgets/: Qt3DRenderer.h  QtAVWidgets.h  global.h
AR/mavlink/: config.h
AR/mavlink/nv-ext/: mavlink_msg_nv_ground_corssing_report.h  mavlink_msg_nv_line_of_sight_report.h  mavlink_msg_nv_system_report.h  mavlink_nv_enums.h  mavlink_nv_ext.h
AR/mavlink/v1.0/ASLUAV/: version.h
AR/mavlink/v1.0/ardupilotmega/: version.h
AR/mavlink/v1.0/autoquad/: version.h
AR/mavlink/v1.0/common/: version.h
AR/mavlink/v1.0/icarous/: version.h
AR/mavlink/v1.0/matrixpilot/: version.h
AR/mavlink/v1.0/paparazzi/: version.h
AR/mavlink/v1.0/slugs/: version.h
AR/mavlink/v1.0/standard/: version.h
AR/mavlink/v1.0/uAvionix/: version.h
AR/mavlink/v1.0/ualberta/: version.h
AR/mavlink/v2.0/: msgmap.hpp
AR/mavlink/v2.0/ASLUAV/: ASLUAV.hpp  version.h
AR/mavlink/v2.0/ardupilotmega/: ardupilotmega.hpp  version.h
AR/mavlink/v2.0/autoquad/: autoquad.hpp  version.h
AR/mavlink/v2.0/common/: version.h
AR/mavlink/v2.0/icarous/: version.h
AR/mavlink/v2.0/matrixpilot/: matrixpilot.hpp  version.h
AR/mavlink/v2.0/paparazzi/: paparazzi.h  paparazzi.hpp  version.h
AR/mavlink/v2.0/slugs/: slugs.hpp  version.h
AR/mavlink/v2.0/standard/: standard.hpp  version.h
AR/mavlink/v2.0/uAvionix/: version.h
AR/mavlink/v2.0/ualberta/: ualberta.h  ualberta.hpp  version.h
AR/packaging/: CMakeLists.txt
AR/packaging/linux/: CMakeLists.txt
AR/packaging/linux/hermes/: CMakeLists.txt  hermes.appdata.xml.in  hermes.desktop.in  hermes.xml
AR/packaging/linux/hmtool/: CMakeLists.txt  hmtool.appdata.xml.in  hmtool.desktop.in  hmtool.xml
AR/packaging/linux/misc-tools/: CMakeLists.txt  close.desktop.in  sitl.desktop.in
AR/packaging/windows/: CMakeLists.txt  package.sh  resources.rc  version.h
AR/packaging/windows/hmtool/: resources.rc  version.h
AR/packaging/windows/nsis/: extensions.nsh  hermes.nsi
AR/scripts/: 1-setup-linux.sh  1-setup-windows-msys2.sh  2-build-windows-mingw64-release.bat  2-package-windows-mingw64-release.bat  build-msys-cmake.sh  build-windows-msys2.bat  build_script_wrapper.sh  chroot-connect.sh  chroot-setup.sh  msys2_env.bat  qemu-chroot-build.sh
CAN_BUS/Canard/: CAN.ino  Canard.ino
CAN_BUS/libuavcan_t4/Arduino_IDE/libuavcan/: CMakeLists.txt  library.properties
CAN_BUS/libuavcan_t4/Arduino_IDE/libuavcan/examples/teensy_uavcan_gnsFix_publish/: Publisher.h
CAN_BUS/libuavcan_t4/Arduino_IDE/libuavcan/examples/teensy_uavcan_gnssFix_subscribe/: Subscriber.h  teensy_uavcan_gnssFix_subscribe.ino
CAN_BUS/libuavcan_t4/Arduino_IDE/libuavcan/examples/teensy_uavcan_gnssFix_subscribev2/: phoenix_can_shield.h  teensy_uavcan_gnssFix_subscribev2.ino
CAN_BUS/libuavcan_t4/Arduino_IDE/libuavcan/src/: CMakeLists.txt
CAN_BUS/libuavcan_t4/Arduino_IDE/libuavcan/src/uavcan/: CoarseOrientation.hpp  Timestamp.hpp  build_config.hpp  debug.hpp
CAN_BUS/libuavcan_t4/Arduino_IDE/libuavcan/src/uavcan/navigation/: GlobalNavigationSolution.hpp
CAN_BUS/libuavcan_t4/Arduino_IDE/libuavcan/src/uavcan/node/: node.hpp
CAN_BUS/libuavcan_t4/Arduino_IDE/libuavcan/src/uavcan/protocol/: AccessCommandShell.hpp  CANIfaceStats.hpp  DataTypeKind.hpp  GetDataTypeInfo.hpp  GetNodeInfo.hpp  GetTransportStats.hpp  GlobalTimeSync.hpp  HardwareVersion.hpp  NodeStatus.hpp  Panic.hpp  RestartNode.hpp  SoftwareVersion.hpp
CAN_BUS/libuavcan_t4/Arduino_IDE/libuavcan/src/uavcan/transport/: uc_can_io.cpp  uc_dispatcher.cpp
CAN_BUS/libuavcan_t4/Arduino_IDE/libuavcan/src/uavcan/tunnel/: Broadcast.hpp  Call.hpp  (+1 more)
Patch-Antena/: 1280-test.hfss
(+86 files in other folders)
